Finalizado el Unit Test

--- a/ParcialRonaldVelasco/ParcialRonaldVelasco/Web.config
+++ b/ParcialRonaldVelasco/ParcialRonaldVelasco/Web.config
@@ -11,7 +11,7 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ParcialRonaldVelasco-20200919112644.mdf;Initial Catalog=aspnet-ParcialRonaldVelasco-20200919112644;Integrated Security=True"
+    <add name="DefaultConnection" connectionString="Server=tcp:srvandrebd.database.windows.net,1433;Initial Catalog=Parcial1;Persist Security Info=False;User ID=andre;Password=Passw0rd;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings></appSettings>
